# LocalStorage

./: .gitignore  Cargo.toml  README.md
config/: config.toml  log4rs.yaml
documentation/: EdgeNode_LocalStore.md
src/: database.rs  main.rs  parser.rs
