[package]
name = "local_storage"
version = "0.1.0"
authors = ["Beni <benireydman901@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqtt = "0.31"
rmp-serde = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7.3"
crc = "1.8.1"
ctrlc = "3.1.4"